2016-05-29  Werner Lemberg  <wl@gnu.org>

	[ftinspect] Prepare zoom for drawing pixel center.

	This change makes the zoom use only even values larger than a given
	threshold; it also implements (kind of) logarithmic zooming.

	* src/ftinspect.h (QSpinBoxx): New class, derived from `QSpinBox'.
	(MainGUI): Updated.

	* src/ftinspect.cpp (MainGUI::createLayout): Updated.
	(QSpinBoxx::valueFromText, QSpinBoxx::stepBy): New methods.

2016-05-26  Werner Lemberg  <wl@gnu.org>

	[ftbench] Add support for third TrueType interpreter version.

	Option `-H' now takes an argument to select the CFF hinting engine,
	and new option `-I' selects the TT interpreter version.

	* src/ftbench.c (default_hinting_engine,
	default_interpreter_version): Replaced with... 
	(tt_interpreter_versions, num_tt_interpreter_versions,
	dflt_tt_interpreter_version, cff_hinting_engines,
	num_cff_hinting_engines, dflt_cff_hinting_engine,
	cff_hinting_engine_names): ...  these new global variables.
	(main): Expand check for alternative TrueType interpreter versions
	and CFF hinting engines.
	Add argument to option `-H'.
	Add new option `-I'.
	(usage): Updated.

	* src/ftbench.1: Updated.

2016-05-26  Werner Lemberg  <wl@gnu.org>

	[ttdebug] Rename option `-H' to `-I'.

	This is for consistency with a forthcoming change to `ftbench'.

	* src/ttdebug.c (main): Implement it.
	(Usage): Updated.

	* src/ttdebug.1: Updated.

2016-05-26  Werner Lemberg  <wl@gnu.org>

	[ttdebug] Add support for third TrueType interpreter version.

	Option `-H' now takes an argument.

	* src/ttdebug.c (default_version, alternative_version): Replaced
	with...
	(tt_interpreter_versions, num_tt_interpreter_versions,
	dflt_tt_interpreter_version): ... these new global variables.
	(main): Expand check for alternative TrueType interpreter versions.
	Add argument to option `-H'.
	(Usage): Updated.

	* src/ttdebug.1: Updated.

2016-05-21  Werner Lemberg  <wl@gnu.org>

	[ftgrid] Add support for third TrueType interpreter version.
